fixed layout issues

--- a/src/styles/paywall.sass
+++ b/src/styles/paywall.sass
@@ -15,6 +15,9 @@
     line-height: 29px
 .featureTxt
     font-size: 20px
+    @media (max-width: 400px)
+        font-size: 16px // or whatever
+
 .featureTitle
     font-size: 24px
 .innerBox
@@ -22,17 +25,12 @@
 .bottomTagline
     font-size: 16px
 .headerTxt
+    font-size: 32px
     line-height: 48px
 .topSelectorText
     font-size: 18px
 .smalltxt
     font-size: 10px
-.recommendedBorderTop
-    border-top: 12px solid #4624D6
-    border-left: 12px solid #4624D6
-    border-right: 12px solid #4624D6
 
-.recommendedBorderBtm
-    border-bottom: 12px solid #4624D6
-    border-left: 12px solid #4624D6
-    border-right: 12px solid #4624D6
+.recommendedBorder
+    border: 12px solid #4624D6
